--- a/html&css/webdev-Colt/01_CourseOrientation.html
+++ b/html&css/webdev-Colt/01_CourseOrientation.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="docStyles.css">
+        <link rel="stylesheet" href="../docStyles.css">
     </head>
 
     <body>
@@ -23,21 +23,38 @@
             <section id="toc">
                 <h2>Table of Contents</h2>
                 <ul>
-                    <li>Empty Document</li>
+                    <li><a href="#ed">Empty Document</a></li>
                 </ul>
+
+                <section id="developer">
+                    <h2>Devloper</h2>
+                    <div id="devInfo">
+                        <img src="../../src/html&css/me.jpg" alt="Developer I Am">
+                        <ul>
+                            <li id="devName">Andre Coetzer</li>
+                            <li id="devTitle">Developer</li>
+                            <li id="devKnowledge"> <span class="lang">html</span> <span class="lang">css</span> <span
+                                    class="lang">js</span></li>
+                        </ul>
+                    </div>
+
+                </section>
             </section>
 
             <section id="notes">
-                <h2><b>Empty Document</b></h2>
-                <p>
-                    This section had no note worthy tasks.
-                </p>
+                <article>
+                    <h2 id="ed">Empty Document</h2>
+                    <div class="example">
+
+                    </div>
+                    <p>
+                        This section had no note worthy tasks.
+                    </p>
+                </article>
             </section>
         </main>
         <footer>
-            <p>
-                document set to change.
-            </p>
+
         </footer>
     </body>
 
