--- a/html&css/webdev-Colt/09.1_FancyButtonHoverEffectCodeAlong.html
+++ b/html&css/webdev-Colt/09.1_FancyButtonHoverEffectCodeAlong.html
@@ -5,16 +5,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Fancy Button Hover Effect Code Along</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="buttonCodeAlong.css">
+        <title>Fancy Button Hover Effect Code Along</title>
     </head>
 
     <body>
-        <section>
-                <button id="button">Hover Me</button>
+        <section id="container">
+            <button id="button">Hover Me</button>
         </section>
     </body>
 
