--- a/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
+++ b/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="docStyles.css">
+        <link rel="stylesheet" href="../docStyles.css">
     </head>
 
     <body>
@@ -19,7 +19,6 @@
 
         <main>
             <section id="toc">
-
                 <h2>Table of Contents</h2>
                 <ul>
                     <li><a href="#woeif">What on earth is flexbox?</a></li>
@@ -50,12 +49,13 @@
                         <ul>
                             <li id="devName">Andre Coetzer</li>
                             <li id="devTitle">Developer</li>
-                            <li id="devKnowledge"><span class="devKnowledge">html</span> <span
-                                    class="devKnowledge">css</span> <span class="devKnowledge">js</span></li>
+                            <li id="devKnowledge">
+                                <span class="lang">html</span>
+                                <span class="lang">css</span> 
+                                <span class="lang">js</span></li>
                         </ul>
                     </div>
                 </section>
-
             </section>
 
             <section id="notes">
@@ -171,7 +171,6 @@
                         meaning left and right. <span class="important">This can lead to certain elements looking
                             uneven</span>.
                     </p>
-
                     <p>
                         Space-evenly like space-around provides space on either side of the element, however it keeps a
                         consistant even spacing. This resulting in a even look and feel.
