--- a/html&css/webdev-Colt/05.1_55-MarathonFormExercise.html
+++ b/html&css/webdev-Colt/05.1_55-MarathonFormExercise.html
@@ -2,72 +2,100 @@
 <html>
 
     <head>
-        <!-- title -->
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../docStyles.css">
         <title>55 - Marathon Form Exercise</title>
     </head>
 
     <body>
         <header>
-            <!-- header -->
             <h1>55: Marathon Form Exercise</h1>
-            <h2>Building an html form</h2>
         </header>
-        <article>
-            <!-- table of contents -->
-            <h2>Table of Contents</h2>
-            <ul>
-                <li><a href="#the_for">The Form</a></li>
-            </ul>
-        </article>
+
         <main>
-            <!-- main -->
-            <h2 id="the_for">The Form</h2>
-            <h2>Race Registration!</h2>
-            <form action="/tacos">
-                <div>
-                    <label for="first">First Name</label>
-                    <input type="text" placeholder="first name" name="first_name" id="first" required>
-                    <label for="last">Last Name</label>
-                    <input type="text" placeholder="last name" name="last_name" id="last" required>
-                </div>
-                <p>
-                    Select a Race:
-                </p>
-                <div>
-                    <input type="radio" name="race" id="fun" value="fun" required>
-                    <label for="fun">Fun Run 5k</label>
-                </div>
-                <div>
-                    <input type="radio" name="race" id="half" value="half" required>
-                    <label for="half">Half Marathon</label>
-                </div>
-                <div>
-                    <input type="radio" name="race" id="full" value="full" required>
-                    <label for="full">Full Marathon</label>
-                </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" placeholder="email" name="email" id="email" required>
-                    <label for="password">Password</label>
-                    <input type="password" placeholder="password" name="password" id="password" minlength="6"
-                        maxlength="16" required>
-                </div>
-                <div>
-                    <label for="age">Select Age Group</label>
-                    <select name="age_group" id="age" required>
-                        <option value="kids">Under 18</option>
-                        <option value="young_adults">Age 18 to 30</option>
-                        <option value="adults">Age 31 to 49</option>
-                        <option value="seniors">Age 50+</option>
-                    </select>
-                </div>
-                <button>Register!</button>
-            </form>
+            <section id="toc">
+                <h2>Table of Contents</h2>
+                <ul>
+                    <li><a href="#bahf">Building an html form</a>
+                        <ul>
+                            <li><a href="#tfrr">The Form, Race Registration!</a></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <section id="developer">
+                    <h2>Developer</h2>
+                    <div id="devInfo">
+                        <img src="../../src/html&css/me.jpg" alt="Developer Am I">
+                        <ul>
+                            <li id="devName">Andre Coetzer</li>
+                            <li id="devTitle">Developer</li>
+                            <li id="devKnowledge">
+                                <span class="lang">html</span>
+                                <span class="lang">css</span>
+                                <span class="lang">js</span>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+            </section>
+
+            <section id="notes">
+                <article>
+                    <h2 id="bahf">Building an html form</h2>
+                    <h3 id="tfrr">The Form, Race Registration!</h3>
+                    <div id="example">
+                        <form action="/tacos">
+                            <div>
+                                <label for="first">First Name</label>
+                                <input type="text" placeholder="first name" name="first_name" id="first" required>
+                                <label for="last">Last Name</label>
+                                <input type="text" placeholder="last name" name="last_name" id="last" required>
+                            </div>
+                            <p>
+                                Select a Race:
+                            </p>
+                            <div>
+                                <input type="radio" name="race" id="fun" value="fun" required>
+                                <label for="fun">Fun Run 5k</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="race" id="half" value="half" required>
+                                <label for="half">Half Marathon</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="race" id="full" value="full" required>
+                                <label for="full">Full Marathon</label>
+                            </div>
+                            <div>
+                                <label for="email">Email</label>
+                                <input type="email" placeholder="email" name="email" id="email" required>
+                                <label for="password">Password</label>
+                                <input type="password" placeholder="password" name="password" id="password"
+                                    minlength="6" maxlength="16" required>
+                            </div>
+                            <div>
+                                <label for="age">Select Age Group</label>
+                                <select name="age_group" id="age" required>
+                                    <option value="kids">Under 18</option>
+                                    <option value="young_adults">Age 18 to 30</option>
+                                    <option value="adults">Age 31 to 49</option>
+                                    <option value="seniors">Age 50+</option>
+                                </select>
+                            </div>
+                            <button>Register!</button>
+                        </form>
+                    </div>
+                </article>
+            </section>
         </main>
         <footer>
-            <p>
-                document set to change.
-            </p>
+            
         </footer>
     </body>
 
