--- a/html&css/webdevAdv-Colt/01_CourseIntroduction.html
+++ b/html&css/webdevAdv-Colt/01_CourseIntroduction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
     <head>
         <meta charset="UTF-8">
@@ -9,30 +9,31 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../docStyles.css">
-        <title>HTML- An Introduction To Web Developement</title>
+        <title>Course Orientation</title>
     </head>
 
     <body>
         <header>
-            <h1>HTML- An Introduction To Web Developement</h1>
+            <h1>Course Orientation</h1>
         </header>
 
         <main>
+
             <section id="toc">
                 <h2>Table of Contents</h2>
                 <ul>
-                    <li><a href="#ed">Empty Document</a></li>
+                    <li><a href="#tshnnwt">This section had no note worthy tasks</a></li>
                 </ul>
 
                 <section id="developer">
                     <h2>Developer</h2>
                     <div id="devInfo">
-                        <img src="../../src/html&css/me.jpg" alt="Developer Am I">
+                        <img src="../../src/html&css/me.jpg" alt="Developer I Am">
                         <ul>
-                            <li id="devName"></li>
-                            <li id="devTitle"></li>
-                            <li id="devKnowledge"><span class="lang">html</span> <span class="lang">css</span> <span
-                                    class="lang">js</span></li>
+                            <li id="devName">Andre Coetzer</li>
+                            <li id="devTitle">Developer</li>
+                            <li id="devKnowledge"><span class="lang">html</span> <span
+                                    class="lang">css</span> <span class="lang">js</span></li>
                         </ul>
                     </div>
                 </section>
@@ -40,19 +41,15 @@
 
             <section id="notes">
                 <article>
-                    <h2 id="ed">Empty Document</h2>
-                    <div>
-
-                    </div>
+                    <h2 id="tshnnwt">This section had no note worthy tasks.</h2>
+                    <div class="example"></div>
                     <p>
-                        This section had no note worthy tasks.
+                        Null.
                     </p>
                 </article>
+
             </section>
         </main>
-        <footer>
-
-        </footer>
     </body>
 
 </html>
