changed and updated

--- a/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
+++ b/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
@@ -20,7 +20,7 @@
         <main>
             <section id="toc">
                 <h2>Table of Contents</h2>
-                <ul>
+                <ul id="tocList">
                     <li><a href="#woeif">What on earth is flexbox?</a></li>
                     <li><a href="#fd">Flex Direction</a></li>
                     <li><a href="#jc">Justify-Content</a></li>
@@ -51,8 +51,9 @@
                             <li id="devTitle">Developer</li>
                             <li id="devKnowledge">
                                 <span class="lang">html</span>
-                                <span class="lang">css</span> 
-                                <span class="lang">js</span></li>
+                                <span class="lang">css</span>
+                                <span class="lang">js</span>
+                            </li>
                         </ul>
                     </div>
                 </section>
