--- a/html&css/webdevAdv-Colt/01_CourseIntroduction.html
+++ b/html&css/webdevAdv-Colt/01_CourseIntroduction.html
@@ -32,8 +32,11 @@
                         <ul>
                             <li id="devName">Andre Coetzer</li>
                             <li id="devTitle">Developer</li>
-                            <li id="devKnowledge"><span class="lang">html</span> <span
-                                    class="lang">css</span> <span class="lang">js</span></li>
+                            <li id="devKnowledge">
+                                <span class="lang">html</span>
+                                <span class="lang">css</span>
+                                <span class="lang">js</span>
+                            </li>
                         </ul>
                     </div>
                 </section>
@@ -50,6 +53,9 @@
 
             </section>
         </main>
+        <footer>
+            
+        </footer>
     </body>
 
 </html>
