--- a/html&css/webdev-Colt/11_JavaScriptBasics.html
+++ b/html&css/webdev-Colt/11_JavaScriptBasics.html
@@ -15,6 +15,9 @@
     <body>
         <header>
             <h1>JavaScript Basics</h1>
+            <nav>
+                <a href="index.html" class="btn">Home</a>
+            </nav>
         </header>
 
         <main>
