--- a/html&css/webdev-Colt/15_JavaScriptStrings&More.html
+++ b/html&css/webdev-Colt/15_JavaScriptStrings&More.html
@@ -225,9 +225,9 @@
                                     With String Literals:
                                     <ul>
                                         <li><span class="important">`</span> You bought <span
-                                                class="important">$(qty)</span> of <span
-                                                class="important">$(product)</span>. The total
-                                            is : $<span class="important">$(qty * price)</span><span
+                                                class="important">${qty}</span> of <span
+                                                class="important">${product}</span>. The total
+                                            is : $<span class="important">${qty * price}</span><span
                                                 class="important">`</span></li>
                                     </ul>
                                 </li>
@@ -244,7 +244,7 @@
                     </p>
                     <p>
                         Within the <span class="important">`back ticks`</span> you use this <span
-                            class="important">$(var)</span> syntax to embed a variable.
+                            class="important">${literal}</span> syntax to embed a variable.
                     </p>
                 </article>
 
@@ -318,7 +318,8 @@
                                     Generating a whole number between a specific value:
                                     <ul>
                                         <li>Math.floor(Math.random() * 3) + 20</li>
-                                        <li>Math.round(Math.random() * 3) + 20 <span class="tag">Works Better</span></li>
+                                        <li>Math.round(Math.random() * 3) + 20 <span class="tag">Works Better</span>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
