--- a/html&css/webdev-Colt/15_JavaScriptStrings&More.html
+++ b/html&css/webdev-Colt/15_JavaScriptStrings&More.html
@@ -21,7 +21,13 @@
             <section id="toc">
                 <h2>Table of Contents</h2>
                 <ul id="tocList">
-                    <li><a href="#"></a></li>
+                    <li><a href="#is">Introducing Strings</a></li>
+                    <li><a href="#il">Indices & Length</a></li>
+                    <li><a href="#sm">String Methods</a></li>
+                    <li><a href="#smwa">String Methods with Arguments</a></li>
+                    <li><a href="#stlsu">String Temple Literals Super Useful</a></li>
+                    <li><a href="#un">Undefined & Null</a></li>
+                    <li><a href="#rntmo">Random Number & The Math Object</a></li>
                 </ul>
 
                 <section id="developer">
@@ -43,7 +49,7 @@
 
             <section id="notes">
                 <article>
-                    <h2 id="">Introducing Strings</h2>
+                    <h2 id="is">Introducing Strings</h2>
                     <div class="example">
                         <ul>
                             <li> let message = <span class="important">'</span>This is a string<span
@@ -77,7 +83,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Indices & length</h2>
+                    <h2 id="il">Indices & length</h2>
                     <div class="example">
                         <ul>
                             <li>let message = '<spand class="important">f</spand>ive';</li>
@@ -129,7 +135,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">String Methods</h2>
+                    <h2 id="sm">String Methods</h2>
                     <div class="example">
                         <ul>
                             <li>thing.method().method2().method3();
@@ -157,7 +163,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">String Methods with Arguments</h2>
+                    <h2 id="smwa">String Methods with Arguments</h2>
                     <div class="example">
                         <ul>
                             <li>thing.indexOf();</li>
@@ -198,7 +204,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">String Template Literals <sup class="tag">Super Useful</sup></h2>
+                    <h2 id="stlsu">String Template Literals <sup class="tag">Super Useful</sup></h2>
                     <div class="example">
                         <div>
                             <ul>
@@ -249,7 +255,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Undefined & Null</h2>
+                    <h2 id="un">Undefined & Null</h2>
                     <div class="example">
                         <ul>
                             <li>Null</li>
@@ -267,7 +273,7 @@
                 </article>
 
                 <article>
-                    <h2 id="">Random Number & The Math Object</h2>
+                    <h2 id="rntmo">Random Number & The Math Object</h2>
                     <div class="example">
                         <div>
                             <ul>
